--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,10 +10,12 @@ edition = "2021"
 attohttpc = { version = "0.18.0", features = ["json"] }
 colored = "2.0.0"
 inquire = "0.2.1"
-progress_bar = "0.1.3"
+pbr = "1.0.4"
 semver = "1.0.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.69"
 
-[features]
+[profile.release]
+opt-level = 'z'
+lto = true
 
